eclipse-workspace/eclipse-workspace/BoolEvalVisitor/src/BoolExpr.g4
grammar BoolExpr;

expr 
    : expr OR term      #orExpr
    | term              #toTerm
    ;
    
term
    : term AND factor   #andExpr
    | factor            #toFactor
    ;

factor
    : NOT factor        #notExpr
    | '(' expr ')'      #parenExpr
    | TRUE              #trueExpr
    | FALSE             #falseExpr
    ;

NOT   : 'NOT';
AND   : 'AND';
OR    : 'OR';
TRUE  : 'TRUE';
FALSE : 'FALSE';
WS    : [ \t\r\n]+ -> skip;
